--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,21 @@
         <meta name="author" content="">
 
         <title>alora</title>
+     
+<style>
+    
+    /* Adjust carousel item width for mobile view */
+    @media (max-width: 767px) {
+        .carousel-item img {
+            width: 100%;
+        }
+        
+        /* Adjust carousel container height for mobile view */
+        .carousel {
+            max-height:600px; /* Adjust the height as needed */
+        }
+    }
+</style>
 
         <!-- CSS FILES -->                
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -67,8 +82,8 @@
                             </ul>
 
                             <div class="ms-lg-3">
-                                <a class="btn custom-btn custom-border-btn" href="#">
-                                   shop
+                                <a class="btn custom-btn custom-border-btn" href="{% url 'shop' %}">
+                                   offer
                                     <i class="bi-arrow-up-right ms-2"></i>
                                 </a>
                             </div>
@@ -95,16 +110,37 @@
                                     Our Story
                                 </a>
 
-                                <a class="btn custom-btn smoothscroll me-2 mb-2" href="#section_3"><strong>Check Menu</strong></a>
+                                <a class="btn custom-btn smoothscroll me-2 mb-2" href="#section_3"><strong>Check collections</strong></a>
                             </div>
 
                         </div>
                     </div>
 
-                    <div class="hero-slides">
-                        <img class="img-fluid" src="{% static 'images/slides/new.avif' %}" alt="">
-                        <img class="img-fluid" src="{% static 'images/slides/new.avif' %}" alt="">
+                    <div class="hero-carousel">
+                        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img src="{% static 'images/team/1.jpeg' %}" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="{% static 'images/team/2.jpeg' %}" class="d-block w-100" alt="...">
+                                </div>
+                                <div class="carousel-item">
+                                    <img src="{% static 'images/team/3.jpeg' %}" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
                     </div>
+                    
+                    
                 </section>
 
 
@@ -146,7 +182,7 @@
                 </section>
 
 
-                <section class="barista-section section-padding section-bg" id="barista-team">
+                <section class="barista-section section-padding section-bg" id="section_3">
                     <div class="container">
                         <div class="row justify-content-center">
 
@@ -219,7 +255,7 @@
                                             <p class="badge ms-4"><em></em></p>
                                         </div>
 
-                                        <p class="text-white mb-0"></p>
+                                        <p class="text-white mb-0">Dining Sets</p>
                                     </div>
 
                                     <div class="team-block-image-wrap">
@@ -235,7 +271,7 @@
 
 
 
-                <section class="reviews-section section-padding section-bg" id="section_4">
+                <section class="reviews-section section-padding section-bg"  >
                     <div class="container">
                         <div class="row justify-content-center">
 
@@ -250,10 +286,10 @@
                                     <div class="timeline-content">
                                         <div class="reviews-block">
                                             <div class="reviews-block-image-wrap d-flex align-items-center">
-                                                <img src="images/reviews/young-woman-with-round-glasses-yellow-sweater.jpg" class="reviews-block-image img-fluid" alt="">
+                                                <img src="{% static 'images/reviews/young-woman-with-round-glasses-yellow-sweater.jpg' %}" class="reviews-block-image img-fluid" alt="">
 
                                                 <div class="">
-                                                    <h6 class="text-white mb-0">Sandra</h6>
+                                                    <h6 class="text-white mb-0" >Sandra</h6>
                                                     <em class="text-white"> Customers</em>
                                                 </div>
                                             </div>
@@ -281,7 +317,7 @@
                                     <div class="timeline-content">
                                         <div class="reviews-block">
                                             <div class="reviews-block-image-wrap d-flex align-items-center">
-                                                <img src="images/reviews/senior-man-white-sweater-eyeglasses.jpg" class="reviews-block-image img-fluid" alt="">
+                                                <img src="{% static 'images/reviews/senior-man-white-sweater-eyeglasses.jpg' %}" class="reviews-block-image img-fluid" alt="">
 
                                                 <div class="">
                                                     <h6 class="text-white mb-0">Don</h6>
@@ -312,7 +348,7 @@
                                     <div class="timeline-content">
                                         <div class="reviews-block">
                                             <div class="reviews-block-image-wrap d-flex align-items-center">
-                                                <img src="images/reviews/young-beautiful-woman-pink-warm-sweater-natural-look-smiling-portrait-isolated-long-hair.jpg" class="reviews-block-image img-fluid" alt="">
+                                                <img src="{% static 'images/reviews/young-beautiful-woman-pink-warm-sweater-natural-look-smiling-portrait-isolated-long-hair.jpg' %}" class="reviews-block-image img-fluid" alt="">
 
                                                 <div class="">
                                                     <h6 class="text-white mb-0">Olivia</h6>
@@ -344,6 +380,110 @@
                     </div>
                 </section>
 
+
+
+                <section class="barista-section section-padding section-bg" id="section_3">
+                    <div class="container">
+                        <div class="row justify-content-center">
+
+                            <div class="col-lg-12 col-12 text-center mb-4 pb-lg-2">
+                                <em class="text-white">Newly Added</em>
+
+                                <h2 class="text-white">RECLINERS</h2>
+                            </div>
+
+                            <div class="col-lg-3 col-md-6 col-12 mb-4">
+                                <div class="team-block-wrap">
+                                    <div class="team-block-info d-flex flex-column">
+                                        <div class="d-flex mt-auto mb-3">
+                                            <h4 class="text-white mb-0"></h4>
+
+                                            <p class="badge ms-4">Garcia Fabric <em></em></p>
+                                        </div>
+
+                                        <p class="text-white mb-0">₹ 119,867</p>
+                                    </div>
+
+                                    <div class="team-block-image-wrap" id="product1" onmouseover="changeImage(this)" onmouseout="restoreImage(this)">
+                                        <img src="{% static 'images/team/o.avif' %}" class="team-block-image img-fluid" alt="">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-3 col-md-6 col-12 mb-4">
+                                <div class="team-block-wrap">
+                                    <div class="team-block-info d-flex flex-column">
+                                        <div class="d-flex mt-auto mb-3">
+                                            <h4 class="text-white mb-0"></h4>
+
+                                            <p class="badge ms-4"><em>Enfield Fabric</em></p>
+                                        </div>
+
+                                        <p class="text-white mb-0">₹79,900</p>
+                                    </div>
+
+                                    <div class="team-block-image-wrap">
+                                        <img src="{% static 'images/team/p.avif' %}" class="team-block-image img-fluid" alt="">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-3 col-md-6 col-12 mb-4">
+                                <div class="team-block-wrap">
+                                    <div class="team-block-info d-flex flex-column">
+                                        <div class="d-flex mt-auto mb-3">
+                                            <h4 class="text-white mb-0"></h4>
+
+                                            <p class="badge ms-4"><em>Elise Velvet </em></p>
+                                        </div>
+
+                                        <p class="text-white mb-0">
+                                            ₹50,000</p>
+                                    </div>
+
+                                    <div class="team-block-image-wrap">
+                                        <img src="{% static 'images/team/u.avif' %}" class="team-block-image img-fluid" alt="">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-lg-3 col-md-6 col-12">
+                                <div class="team-block-wrap">
+                                    <div class="team-block-info d-flex flex-column">
+                                        <div class="d-flex mt-auto mb-3">
+                                            <h4 class="text-white mb-0"></h4>
+
+                                            <p class="badge ms-4"><em>Plush Leather</em></p>
+                                        </div>
+
+                                        <p class="text-white mb-0">₹39,900</p>
+                                    </div>
+
+                                    <div class="team-block-image-wrap">
+                                        <img src="{% static 'images/team/h.avif' %}" class="team-block-image img-fluid" alt="">
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </section>
+                <script>
+                    function changeImage(element) {
+                        var currentSrc = element.querySelector('img').src;
+                        if (currentSrc.includes('/o.avif')) {
+                            element.querySelector('img').src = currentSrc.replace('/o.avif', '/o_another_angle.avif');
+                        }
+                    }
+                
+                    function restoreImage(element) {
+                        var currentSrc = element.querySelector('img').src;
+                        if (currentSrc.includes('/o_another_angle.avif')) {
+                            element.querySelector('img').src = currentSrc.replace('/o_another_angle.avif', '/o.avif');
+                        }
+                    }
+                </script>
+                
 
                 <section class="contact-section section-padding" id="section_5">
                     <div class="container">
@@ -439,21 +579,21 @@
                                     <strong class="me-2">Email:</strong>
 
                                     <a href="mailto:info@yourgmail.com" class="site-footer-link">
-                                        hello@barista.co
+                                        hello@aloha.co
                                     </a>
                                 </p>
                             </div>
 
 
                             <div class="col-lg-5 col-12">
-                                <em class="text-white d-block mb-4">Opening Hours.</em>
+                                <em class="text-white d-block mb-4">Open</em>
 
                                 <ul class="opening-hours-list">
                                     <li class="d-flex">
-                                        Monday - Friday
+                                        Monday - friday
                                         <span class="underline"></span>
 
-                                        <strong>9:00 - 18:00</strong>
+                                        <strong>9:00 am- 9:00</strong>
                                     </li>
 
                                     <li class="d-flex">
@@ -485,8 +625,9 @@
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/jquery.sticky.js' %}"></script>
         <script src="{% static 'js/click-scroll.js' %}"></script>
-        <script src="{% static 'js/vegas.min.js' %}"></script>
-        <script src="{% static 'js/custom.js' %}"></script>
-
+        
+        
+    
+      
     </body>
 </html>
